# FastFramesPackage

./: .asetup.save  README.md  runFastFramePipeline.sh  runFastFramesTest.sh  setup.sh
FastFrames/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  FastFramesConfig.cmake.in  LICENSE  README.md  mkdocs.yml  tWZ4Lep_config.yml  temp_config.yml
FastFrames/.gitlab/issue_templates/: Bug.md  Feature.md  Improvement.md
FastFrames/FastFrames/: Cutflow.h  CutflowContainer.h  DefineHelpersDict.h  HistoContainer.h  Logger.h  MainFrame.h  Metadata.h  MetadataManager.h  Ntuple.h  Region.h  Sample.h  SimpleONNXInference.h  Systematic.h  Truth.h  UniqueSampleID.h  Variable.h  VariableMacros.h  XSectionManager.h
FastFrames/Root/: Binning.cc  ConfigDefine.cc  ConfigSetting.cc  Cutflow.cc  CutflowContainer.cc  DefineHelpers.cc  FastFramesExecutor.cc  HistoContainer.cc  LinkDef.h  MainFrame.cc  Metadata.cc  MetadataManager.cc  Ntuple.cc  ONNXWrapper.cc  ObjectCopier.cc  Region.cc  Sample.cc  ScheduleSimpleONNXInference.cc  SimpleONNXInference.cc  StringOperations.cc  Systematic.cc  SystematicReplacer.cc  Truth.cc  UniqueSampleID.cc  Utils.cc  Variable.cc  XSectionManager.cc
FastFrames/data/: XSection-MC16-13TeV.data
FastFrames/docs/: Doxyfile.in  config.md  helpers.md  index.md  trex_config.md  tutorial.md
FastFrames/docs/changelog/: index.md
FastFrames/examples/: README.md
FastFrames/examples/CustomVariables/: CMakeLists.txt  README.md
FastFrames/examples/CustomVariables/CustomFrame/: CustomFrame.h
FastFrames/examples/CustomVariables/Root/: CustomFrame.cc  LinkDef.h
FastFrames/python/: FastFrames.py  batch_submit.py  check_duplicate_events.py  copyDataToScratch.py  merge_empty_grid_files.py  merge_jobs.py  produce_filelist.py  produce_metadata_files.py  produce_sum_weights_file.py  produce_trexfitter_config.py
FastFrames/python/ConfigReaderModules/: AutomaticRangeGenerator.py  BlockOptionsGetter.py  BlockReaderCommon.py  BlockReaderCutflow.py  BlockReaderGeneral.py  BlockReaderNtuple.py  BlockReaderRegion.py  BlockReaderSample.py  BlockReaderSampleTruth.py  BlockReaderSimpleONNXInference.py  BlockReaderSystematic.py  BlockReaderVariable.py  CommandLineOptions.py  ConfigReader.py
FastFrames/python/TRExFitterConfigPreparation/: TrexSettingsGetter.py
FastFrames/python/development/: update_config_reading_tests.py
FastFrames/python_wrapper/headers/: ConfigDefineWrapper.h  ConfigSettingWrapper.h  CutflowWrapper.h  DuplicateEventsChecker.h  FastFramesExecutorWrapper.h  MainFrameWrapper.h  NtupleWrapper.h  RegionWrapper.h  SampleWrapper.h  SimpleONNXInferenceWrapper.h  SumWeightsGetter.h  SystematicWrapper.h  TruthWrapper.h  VariableWrapper.h
FastFrames/python_wrapper/python/: logger.py
FastFrames/python_wrapper/utils/: ConfigReaderCpp.cxx  Logger.cxx
FastFrames/test/configs/: config.yml  config_TRExFitter_test.yml  config_testing.yml  trex_settings.yml
FastFrames/test/data/: PMGxsecDB_mc16.txt  PMGxsecDB_mc23.txt
FastFrames/test/input/onnx_model/: model_fold_0.onnx  model_fold_1.onnx
FastFrames/test/python/: compare_trex_configs.py  compare_two_files.py  compare_two_root_files.py
FastFrames/test/reference_files/config_reading/: config_MiniAnalysis.yml  config_TRExFitter_test.yml  config_custom_class.yml  config_nested_anchors_test.yml  config_testing.yml  reference_MiniAnalysis.txt  reference_log.txt  reference_log_samples_ttbar_Wjets.txt  reference_nested_anchors.txt
FastFrames/test/reference_files/configs_root_files_comparison/: config.yml
FastFrames/test/reference_files/configs_root_files_comparison/output_histograms/: Data.root  Wjets.root  ttbar_FS.root
FastFrames/test/reference_files/configs_root_files_comparison/output_ntuples/: Data_0_2017_data.root  Wjets_700341_mc20a_fullsim.root
FastFrames/test/reference_files/configs_run/: config.yml  config_histogram_after_ntuple.yml
FastFrames/test/reference_files/trex_configs/: trex_settings.yml
FastFrames/test/reference_files/trex_configs/output/: config_TRExFitter_test_inclusive.config  config_TRExFitter_test_inclusive_with_settings_file.config  config_TRExFitter_test_unfolding.config  config_testing_inclusive.config  config_testing_unfolding.config
FastFrames/util/: fast-frames.cc
input/: filelist.txt  sum_of_weights.txt
install/cmake/: LCGConfig-version.cmake  LCGConfig.cmake
install/cmake/modules/: AtlasCompilerSettings.cmake  AtlasDictionaryFunctions.cmake  AtlasFunctions.cmake  AtlasInstallDirs.cmake  AtlasInstallFunctions.cmake  AtlasInternals.cmake  AtlasLibraryFunctions.cmake  AtlasTestFunctions.cmake  FindAIDA.cmake  FindAlpGen.cmake  FindApfel.cmake  FindBLAS.cmake  FindBaurMC.cmake  FindBoost.cmake  FindCLHEP.cmake  FindCOOL.cmake  FindCORAL.cmake  FindCUDAToolkit.cmake  FindCURL.cmake  FindCairo.cmake  FindCoin3D.cmake  FindCppUnit.cmake  FindCppcheck.cmake  FindCrmc.cmake  FindDavix.cmake  FindDoxygen.cmake  FindEXPAT.cmake  FindEigen.cmake  FindEvtGen.cmake  FindFFTW.cmake  FindFastJet.cmake  FindFastJetContrib.cmake  FindFreetype.cmake  FindFrontier_Client.cmake  FindGMock.cmake  FindGSL.cmake  FindGTest.cmake  FindHDF5.cmake  FindHEPUtils.cmake  FindHJets.cmake  (+169 more)
install/cmake/modules/scripts/: aliasTemplate.in  atlas_build_run.sh.in  atlas_ctest.sh.in  cleanBuildArea.sh.in  cpack_dbg_install.sh.in  cpack_install.cmake  cpack_install.sh.in  extractCTestBuild.py  extractCTestTest.py  mergeClids.sh  mergeConfdb2.py  mergeFiles.sh  mergeSelections.sh  nightly_name.sh  pyCompile.py  setup.sh.in  unit_test_executor.sh.in
install/cmake/modules/skeletons/: CPackDbgRPMConfig.cmake.in  DataLinkDict.h.in  DataLink_selection.xml.in  ElementLinkDict.h.in  (+15 more)
install/include/FastFrames/: Binning.h  ConfigDefine.h  ConfigSetting.h  CustomOptions.h  DefineHelpers.h  FastFramesExecutor.h  ONNXWrapper.h  ObjectCopier.h  StringOperations.h  SystematicReplacer.h  Utils.h
install/lib/: libFastFrames.rootmap  libFastFrames_rdict.pcm
tWZ4LepClass/: CMakeLists.txt  README.md  setup.sh
tWZ4LepClass/Root/: LinkDef.h  tWZ4LepClass.cc
tWZ4LepClass/tWZ4LepClass/: tWZ4LepClass.h
(+3 files in other folders)
